# demucs.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conv_tr_corrections.hpp  demucs.cpp  nvblas.conf
.github/: BLAS_benchmarks.md  PERFORMANCE.md  SDR_scores.md  benchmark_output.txt
cli-apps/: demucs.cpp  demucs_ft.cpp  demucs_ft_mt.cpp  demucs_mt.cpp  demucs_v3.cpp  demucs_v3_mt.cpp  threaded_inference.hpp
scripts/: bench_plots.py  convert-pth-to-ggml.py  demucs_pytorch_inference.py  demucs_pytorch_layer_test.py  demucs_pytorch_layer_test_v3.py  evaluate-demixed-output.py  run_benchmarks.sh
src/: conv.hpp  crosstransformer.cpp  crosstransformer.hpp  dsp.cpp  dsp.hpp  encdec.cpp  encdec.hpp  layers.cpp  layers.hpp  lstm.cpp  lstm.hpp  model.hpp  model_apply.cpp  model_inference.cpp  model_load.cpp  tensor.hpp
src_wasm/: CMakeLists.txt  README.md  demucs.cpp  model_load.hpp
test/: e2e_test.sh  test_dsp.cpp  test_layers.cpp  test_layers_v3.cpp
